--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 python-telegram-bot==12.7
 pytz==2020.1
+sentry-sdk==0.15.1
 six==1.15.0
 SQLAlchemy==1.3.17
 sqlitemodel==0.1.3
 tornado==6.0.4
+urllib3==1.25.9
