--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 alembic==1.4.2
 certifi==2020.4.5.2
 cffi==1.14.0
+chardet==3.0.4
 cryptography==2.9.2
 decorator==4.4.2
 emoji==0.5.4
 future==0.18.2
+idna==2.9
 Mako==1.1.3
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.5
@@ -13,6 +15,7 @@ python-dateutil==2.8.1
 python-editor==1.0.4
 python-telegram-bot==12.7
 pytz==2020.1
+requests==2.24.0
 sentry-sdk==0.15.1
 six==1.15.0
 SQLAlchemy==1.3.17
