--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ cryptography==2.9.2
 decorator==4.4.2
 emoji==0.5.4
 idna==2.10
+importlib-metadata==1.7.0
+inflect==4.1.0
 Mako==1.1.3
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.5
@@ -20,3 +22,4 @@ six==1.15.0
 SQLAlchemy==1.3.18
 tornado==6.0.4
 urllib3==1.25.9
+zipp==3.1.0
