--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.4.3
+APScheduler==3.6.3
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
@@ -14,12 +15,13 @@ psycopg2-binary==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
 python-editor==1.0.4
-python-telegram-bot==12.8
+python-telegram-bot==13.0
 pytz==2020.1
 requests==2.24.0
 sentry-sdk==0.17.6
 six==1.15.0
 SQLAlchemy==1.3.19
 tornado==6.0.4
+tzlocal==2.1
 urllib3==1.25.10
 zipp==3.1.0
