--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 alembic==1.4.3
 APScheduler==3.6.3
+backports.zoneinfo==0.2.1
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
-cryptography==3.2
+cryptography==3.2.1
 decorator==4.4.2
 emoji==0.6.0
+greenlet==0.4.17
 idna==2.10
 importlib-metadata==2.0.0
 inflect==4.1.0
@@ -16,12 +18,12 @@ pycparser==2.20
 python-dateutil==2.8.1
 python-editor==1.0.4
 python-telegram-bot==13.0
-pytz==2020.1
+pytz==2020.4
 requests==2.24.0
-sentry-sdk==0.19.1
+sentry-sdk==0.19.2
 six==1.15.0
-SQLAlchemy==1.3.20
-tornado==6.1b1
+SQLAlchemy==1.4.0b1
+tornado==6.1
 tzlocal==3.0b1
 urllib3==1.25.11
-zipp==3.3.1
+zipp==3.4.0
