--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,18 +28,9 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pylint
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Python Code Quality and Lint
-      uses: ricardochaves/python-lint@v1.3.0
-      with:
-        use-pylint: true
-        use-pycodestyle: false
-        use-flake8: true
-        use-black: false
-        use-mypy: false
-        use-isort: false
-        extra-pylint-options: ""
-        extra-pycodestyle-options: ""
-        extra-flake8-options: ""
-        extra-black-options: ""
-        extra-mypy-options: ""
-        extra-isort-options: ""
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
