--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
 alembic==1.4.3
 APScheduler==3.6.3
+astroid==2.4.2
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
-cryptography==3.2
+cryptography==3.2.1
 decorator==4.4.2
 emoji==0.6.0
 idna==2.10
 importlib-metadata==2.0.0
-inflect==4.1.0
+isort==5.6.4
+lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==2.0.0a1
+mccabe==0.6.1
 psycopg2-binary==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
@@ -18,10 +21,12 @@ python-editor==1.0.4
 python-telegram-bot==13.0
 pytz==2020.1
 requests==2.24.0
-sentry-sdk==0.19.1
+sentry-sdk==0.19.2
 six==1.15.0
 SQLAlchemy==1.3.20
+toml==0.10.2
 tornado==6.1b1
 tzlocal==3.0b1
 urllib3==1.25.11
+wrapt==1.12.1
 zipp==3.3.1
