--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,8 @@ lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==2.0.0a1
 mccabe==0.6.1
+numpy==1.19.4
+pandas==1.1.4
 psycopg2-binary==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
@@ -24,6 +26,7 @@ requests==2.24.0
 sentry-sdk==0.19.2
 six==1.15.0
 SQLAlchemy==1.3.20
+tabulate==0.8.7
 toml==0.10.2
 tornado==6.1b1
 tzlocal==3.0b1
