--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-alembic==1.4.3
+alembic==1.5.8
 APScheduler==3.6.3
 astroid==2.4.2
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
-cryptography==3.3.2
+cryptography==3.2.1
 decorator==4.4.2
-emoji==0.6.0
+emoji==1.2.0
+greenlet==1.0.0
 idna==2.10
 importlib-metadata==2.0.0
 isort==5.6.4
@@ -14,23 +15,23 @@ lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==2.0.0a1
 mccabe==0.6.1
-numpy==1.19.4
-pandas==1.1.4
+numpy==1.20.1
+pandas==1.2.3
+Pillow==8.1.2
 psycopg2-binary==2.8.6
 pycparser==2.20
 python-dateutil==2.8.1
 python-editor==1.0.4
-python-telegram-bot==13.0
-pytz==2020.1
-requests==2.24.0
-sentry-sdk==0.19.2
+python-telegram-bot==13.4.1
+pytz==2021.1
+requests==2.25.1
+sentry-sdk==1.0.0
 six==1.15.0
-SQLAlchemy==1.3.20
-tabulate==0.8.7
+SQLAlchemy==1.4.3
+tabulate==0.8.9
 toml==0.10.2
 tornado==6.1b1
 tzlocal==3.0b1
 urllib3==1.25.11
 wrapt==1.12.1
 zipp==3.3.1
-Pillow==8.1.2
