--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,26 @@ astroid==2.4.2
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
-cryptography==3.3.2
+cryptography==3.2.1
+cycler==0.10.0
 decorator==4.4.2
 emoji==1.2.0
 greenlet==1.0.0
 idna==2.10
 importlib-metadata==2.0.0
 isort==5.6.4
+kiwisolver==1.3.1
 lazy-object-proxy==1.4.3
 Mako==1.1.3
 MarkupSafe==2.0.0a1
+matplotlib==3.4.0
 mccabe==0.6.1
 numpy==1.20.1
 pandas==1.2.3
 Pillow==8.1.2
 psycopg2-binary==2.8.6
 pycparser==2.20
+pyparsing==2.4.7
 python-dateutil==2.8.1
 python-editor==1.0.4
 python-telegram-bot==13.4.1
