--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
 alembic==1.5.8
 APScheduler==3.6.3
 astroid==2.4.2
+cachetools==4.2.2
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 cryptography==3.3.2
 cycler==0.10.0
 decorator==4.4.2
-emoji==1.2.0
+emoji==1.6.1
 greenlet==1.0.0
 idna==2.10
 importlib-metadata==2.0.0
@@ -20,22 +21,24 @@ matplotlib==3.4.0
 mccabe==0.6.1
 numpy==1.20.1
 pandas==1.2.3
-Pillow==8.3.2
+Pillow==8.1.2
 psycopg2-binary==2.8.6
 pycparser==2.20
 pyparsing==2.4.7
 python-dateutil==2.8.1
 python-editor==1.0.4
-python-telegram-bot==13.4.1
-pytz==2021.1
+python-telegram-bot==13.8.1
+pytz==2021.3
+pytz-deprecation-shim==0.1.0.post0
 requests==2.25.1
-sentry-sdk==1.0.0
+sentry-sdk==1.5.0
 six==1.15.0
-SQLAlchemy==1.4.3
+SQLAlchemy==1.4.27
 tabulate==0.8.9
 toml==0.10.2
-tornado==6.1b1
+tornado==6.1
+tzdata==2021.5
 tzlocal==3.0b1
-urllib3==1.26.5
+urllib3==1.25.11
 wrapt==1.12.1
 zipp==3.3.1
